@@ -1,3 +1,9 @@
+2007-08-28  Ben Motmans <ben.motmans@gmail.com> 
+
+	* Widgets/DataGrid/DataGrid.cs, Widgets/SqlEditorWidget.cs,
+	  MonoDevelop.Database.Components.addin.xml: updated addin paths
+	* Makefile.am: updated makefile
+
 2007-08-03  Ben Motmans <ben.motmans@gmail.com>
 
 	* Widgets/SqlEditorWidget.cs: fixed the context menu
